--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -28,6 +28,9 @@ jobs:
       - run: yarn --immutable
       - run: yarn test
       - run: yarn build
+        env:
+          REACT_APP_VERSION: ${{ github.sha }}
+          REACT_APP_ENTUR_CLIENT_NAME: entur-shamash2023
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
