--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "graphiql": "^1.3.2",
     "graphiql-explorer": "^0.9.0",
     "graphql": "^15.4.0",
+    "graphql-ws": "^5.16.0",
     "history": "^4.10.1",
     "html-webpack-plugin": "4.5.2",
     "husky": "^3.1.0",
