--- a/package.json
+++ b/package.json
@@ -3,96 +3,107 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "3.13.8",
-    "@babel/core": "7.27.7",
+    "@apollo/client": "3.11.8",
+    "@babel/core": "7.25.7",
     "@entur/form": "3.4.7",
     "@entur/icons": "1.20.0",
     "@entur/sdk": "1.11.1",
     "@entur/table": "4.9.12",
+    "@graphiql/plugin-explorer": "^5.0.0",
+    "@graphiql/toolkit": "0.8.4",
     "@mapbox/polyline": "1.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
-    "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "7.2.1",
-    "@turf/bbox": "6.5.0",
-    "@turf/helpers": "6.5.0",
-    "@turf/line-to-polygon": "6.5.0",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.4.1",
+    "@svgr/webpack": "8.1.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@turf/bbox": "7.1.0",
+    "@turf/helpers": "7.1.0",
+    "@turf/line-to-polygon": "7.1.0",
+    "@typescript-eslint/eslint-plugin": "8.15.0",
+    "@typescript-eslint/parser": "8.15.0",
+    "babel-jest": "29.7.0",
+    "babel-loader": "9.2.1",
     "babel-plugin-named-asset-import": "0.3.8",
     "babel-preset-react-app": "10.1.0",
-    "bfj": "7.1.0",
-    "camelcase": "6.3.0",
+    "bfj": "9.0.2",
+    "buffer": "^6.0.3",
+    "camelcase": "8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "css-loader": "4.3.0",
-    "dotenv": "8.6.0",
-    "dotenv-expand": "5.1.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.8",
-    "eslint": "7.32.0",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-plugin-flowtype": "5.10.0",
-    "eslint-plugin-import": "2.32.0",
-    "eslint-plugin-jest": "24.7.0",
+    "crypto-browserify": "^3.12.1",
+    "css-loader": "7.1.2",
+    "css-minimizer-webpack-plugin": "7.0.0",
+    "dotenv": "16.4.7",
+    "dotenv-expand": "11.0.7",
+    "eslint": "9.17.0",
+    "eslint-config-react-app": "7.0.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-testing-library": "3.10.2",
-    "eslint-webpack-plugin": "2.7.0",
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-testing-library": "6.4.0",
+    "eslint-webpack-plugin": "4.2.0",
     "file-loader": "6.2.0",
-    "fs-extra": "9.1.0",
+    "fs-extra": "11.2.0",
+    "global": "^4.4.0",
     "graphiql": "1.11.5",
     "graphiql-explorer": "0.9.0",
-    "graphql": "15.10.1",
+    "graphql": "16.9.0",
     "graphql-ws": "5.16.2",
-    "history": "4.10.1",
-    "html-webpack-plugin": "4.5.2",
-    "husky": "3.1.0",
+    "history": "5.3.0",
+    "html-webpack-plugin": "5.6.3",
+    "https-browserify": "^1.0.0",
+    "husky": "9.1.7",
     "identity-obj-proxy": "3.0.0",
-    "isomorphic-fetch": "2.2.1",
-    "jest": "26.6.3",
-    "jest-circus": "26.6.3",
-    "jest-resolve": "26.6.2",
-    "jest-watch-typeahead": "0.6.5",
+    "isomorphic-fetch": "^3.0.0",
+    "jest": "29.7.0",
+    "jest-circus": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-resolve": "29.7.0",
+    "jest-watch-typeahead": "2.2.2",
     "leaflet": "1.9.4",
-    "lint-staged": "9.5.0",
+    "lint-staged": "15.2.11",
     "lodash.debounce": "4.0.8",
-    "mini-css-extract-plugin": "0.12.0",
-    "optimize-css-assets-webpack-plugin": "5.0.8",
-    "pnp-webpack-plugin": "1.7.0",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.2",
-    "postcss-safe-parser": "5.0.2",
+    "mini-css-extract-plugin": "2.9.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "8.5.1",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "8.1.1",
+    "postcss-normalize": "13.0.1",
+    "postcss-preset-env": "10.1.1",
+    "postcss-safe-parser": "7.0.1",
+    "process": "^0.11.10",
     "prompts": "2.4.2",
-    "query-string": "6.14.1",
-    "react": "16.14.0",
-    "react-app-polyfill": "2.0.0",
-    "react-dev-utils": "11.0.4",
-    "react-dom": "16.14.0",
-    "react-helmet": "5.2.1",
-    "react-leaflet": "3.2.5",
+    "query-string": "9.1.1",
+    "querystring-es3": "^0.2.1",
+    "react": "18.3.1",
+    "react-app-polyfill": "3.0.0",
+    "react-dev-utils": "12.0.1",
+    "react-dom": "18.3.1",
+    "react-helmet": "6.1.0",
+    "react-leaflet": "4.2.1",
     "react-refresh": "0.17.0",
-    "react-test-renderer": "16.14.0",
+    "react-test-renderer": "18.3.1",
+    "regexpu-core": "^6.2.0",
     "resolve": "1.22.10",
-    "resolve-url-loader": "3.1.5",
-    "sass-loader": "10.5.2",
+    "resolve-url-loader": "5.0.0",
+    "sass-loader": "16.0.3",
     "semver": "7.7.2",
-    "style-loader": "1.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "4.0.0",
     "subscriptions-transport-ws": "0.11.0",
-    "terser-webpack-plugin": "4.2.3",
-    "ts-pnp": "1.2.0",
+    "terser-webpack-plugin": "5.3.11",
+    "url": "^0.11.4",
     "url-loader": "4.1.1",
-    "uuid": "3.4.0",
-    "webpack": "4.47.0",
-    "webpack-dev-server": "3.11.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "util": "^0.12.5",
+    "uuid": "11.0.3",
+    "webpack": "5.97.1",
+    "webpack-dev-server": "5.1.0",
+    "webpack-manifest-plugin": "5.0.0",
+    "workbox-webpack-plugin": "7.3.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -123,6 +134,7 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "eslint-plugin-prettier": "3.4.1",
     "prettier": "2.8.8"
   },
@@ -152,7 +164,7 @@
       "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
+      "[/\\\\]node_modules[/\\\\](?!(graphiql|@graphiql|graphql-language-service|vscode-languageserver-types|meros|query-string|decode-uri-component|split-on-first|filter-obj|react-leaflet|@react-leaflet|@turf)).+\\.(js|jsx|mjs|cjs|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "modulePaths": [
