--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@entur/sdk": "1.11.1",
     "@entur/table": "4.9.12",
     "@graphiql/plugin-explorer": "^5.0.0",
+    "@graphiql/react": "^0.35.0",
     "@graphiql/toolkit": "0.8.4",
     "@mapbox/polyline": "1.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
@@ -27,6 +28,7 @@
     "babel-plugin-named-asset-import": "0.3.8",
     "babel-preset-react-app": "10.1.0",
     "bfj": "9.0.2",
+    "browserslist": "^4.23.1",
     "buffer": "^6.0.3",
     "camelcase": "8.0.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
@@ -35,7 +37,7 @@
     "css-minimizer-webpack-plugin": "7.0.0",
     "dotenv": "16.4.7",
     "dotenv-expand": "11.0.7",
-    "eslint": "9.17.0",
+    "eslint": "8.57.1",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.9.0",
@@ -89,6 +91,7 @@
     "regexpu-core": "^6.2.0",
     "resolve": "1.22.10",
     "resolve-url-loader": "5.0.0",
+    "sass": "^1.65.1",
     "sass-loader": "16.0.3",
     "semver": "7.7.2",
     "stream-browserify": "^3.0.0",
@@ -96,6 +99,7 @@
     "style-loader": "4.0.0",
     "subscriptions-transport-ws": "0.11.0",
     "terser-webpack-plugin": "5.3.11",
+    "typescript": "^5.6.3",
     "url": "^0.11.4",
     "url-loader": "4.1.1",
     "util": "^0.12.5",
