try to fix 404 on dev

--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/graphql-explorer/index.html"
+        "destination": "/index.html"
       }
     ]
   }
