try to fix 404 on dev, pt5

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shamash",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/graphql-explorer",
   "type": "module",
   "dependencies": {
     "@apollo/client": "3.11.8",
