try to fix 404 on dev, pt6

--- a/firebase.json
+++ b/firebase.json
@@ -4,8 +4,8 @@
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/graphql-explorer/**",
+        "destination": "/graphql-explorer/index.html"
       }
     ]
   }
