--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,13 +27,17 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: Install dependencies
-        if: steps.cache-npm.outputs.cache-hit != 'true'
         run: yarn --immutable
       - run: yarn test
       - run: yarn build
         env:
           REACT_APP_VERSION: ${{ github.sha }}
           REACT_APP_ENTUR_CLIENT_NAME: entur-shamash2023
+      - name: Restructure build artifacts
+        run: |
+          mkdir graphql-explorer
+          mv build/* graphql-explorer/
+          mv graphql-explorer build/
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
