--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "dependencies": {
     "@apollo/client": "3.13.8",
-    "@babel/core": "7.28.0",
     "@entur/form": "3.4.7",
     "@entur/icons": "1.20.0",
     "@entur/sdk": "1.11.1",
@@ -14,106 +13,50 @@
     "@graphiql/react": "^0.35.1",
     "@graphiql/toolkit": "0.11.3",
     "@mapbox/polyline": "1.2.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.6.1",
-    "@svgr/webpack": "8.1.0",
-    "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "16.0.1",
-    "@testing-library/user-event": "14.5.2",
     "@turf/bbox": "7.1.0",
     "@turf/helpers": "7.1.0",
     "@turf/line-to-polygon": "7.1.0",
-    "@typescript-eslint/eslint-plugin": "8.15.0",
-    "@typescript-eslint/parser": "8.15.0",
-    "babel-jest": "29.7.0",
-    "babel-loader": "9.2.1",
-    "babel-plugin-named-asset-import": "0.3.8",
-    "babel-preset-react-app": "10.1.0",
-    "bfj": "9.1.2",
-    "browserslist": "^4.23.1",
     "buffer": "^6.0.3",
-    "case-sensitive-paths-webpack-plugin": "2.4.0",
     "crypto-browserify": "^3.12.1",
-    "css-loader": "7.1.2",
-    "css-minimizer-webpack-plugin": "7.0.2",
-    "dotenv": "16.6.1",
-    "dotenv-expand": "^12.0.2",
-    "eslint": "8.57.1",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jest": "28.14.0",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-testing-library": "6.4.0",
-    "eslint-webpack-plugin": "4.2.0",
-    "file-loader": "6.2.0",
-    "fs-extra": "11.2.0",
+    "dotenv": "16.4.7",
     "global": "^4.4.0",
     "graphiql": "1.11.5",
     "graphiql-explorer": "0.9.0",
     "graphql": "16.9.0",
     "graphql-ws": "5.16.2",
     "history": "5.3.0",
-    "html-webpack-plugin": "5.6.3",
     "https-browserify": "^1.0.0",
-    "husky": "9.1.7",
-    "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "29.7.0",
-    "jest-circus": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-resolve": "29.7.0",
-    "jest-watch-typeahead": "2.2.2",
     "leaflet": "1.9.4",
-    "lint-staged": "15.2.11",
     "lodash.debounce": "4.0.8",
-    "mini-css-extract-plugin": "2.9.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "postcss": "8.5.6",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "8.1.1",
-    "postcss-normalize": "13.0.1",
-    "postcss-preset-env": "10.1.1",
-    "postcss-safe-parser": "7.0.1",
     "process": "^0.11.10",
-    "prompts": "2.4.2",
     "query-string": "9.1.1",
     "querystring-es3": "^0.2.1",
     "react": "18.3.1",
-    "react-app-polyfill": "3.0.0",
-    "react-dev-utils": "12.0.1",
     "react-dom": "18.3.1",
     "react-helmet": "6.1.0",
     "react-leaflet": "4.2.1",
-    "react-refresh": "0.17.0",
     "react-test-renderer": "18.3.1",
-    "regexpu-core": "^6.2.0",
-    "resolve": "1.22.10",
-    "resolve-url-loader": "5.0.0",
     "sass": "^1.65.1",
-    "sass-loader": "16.0.5",
-    "semver": "7.7.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "style-loader": "4.0.0",
     "subscriptions-transport-ws": "0.11.0",
-    "terser-webpack-plugin": "5.3.14",
     "typescript": "^5.6.3",
     "url": "^0.11.4",
-    "url-loader": "4.1.1",
     "util": "^0.12.5",
-    "uuid": "11.0.3",
-    "webpack": "5.97.1",
-    "webpack-dev-server": "5.2.2",
-    "webpack-manifest-plugin": "5.0.1",
-    "workbox-webpack-plugin": "7.3.0"
+    "uuid": "11.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.cjs",
+    "dev": "vite",
+    "start": "vite",
     "start:server": "node server.js",
-    "build": "node scripts/build.cjs",
-    "test": "node scripts/test.cjs",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "lint": "eslint src && yarn format:check",
     "format:check": "prettier --check .",
     "format": "prettier --write ."
@@ -138,76 +81,26 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.28.0",
     "@testing-library/dom": "^10.4.0",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@typescript-eslint/eslint-plugin": "8.15.0",
+    "@typescript-eslint/parser": "8.15.0",
+    "@vitejs/plugin-react": "4.6.0",
+    "eslint": "8.57.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "28.9.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-testing-library": "6.4.0",
     "eslint-plugin-prettier": "3.4.1",
-    "prettier": "2.8.8"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "<rootDir>/node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.cjs",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.cjs",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.cjs"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\](?!(graphiql|@graphiql|graphql-language-service|vscode-languageserver-types|meros|query-string|decode-uri-component|split-on-first|filter-obj|react-leaflet|@react-leaflet|@turf)).+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [
-      "<rootDir>/src"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "engines": {
-    "node": ">=22.11.0",
-    "yarn": ">=1.22.0 <2.0.0"
+    "husky": "9.1.7",
+    "jsdom": "26.1.0",
+    "lint-staged": "15.2.11",
+    "prettier": "2.8.8",
+    "vite": "7.0.2",
+    "vitest": "3.2.4"
   }
 }
