--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "history": "5.3.0",
     "https-browserify": "^1.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "leaflet": "1.9.4",
+    "leaflet": "^1.9.4",
     "lodash.debounce": "4.0.8",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -92,10 +92,10 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-testing-library": "6.4.0",
-    "eslint-plugin-prettier": "3.4.1",
     "husky": "9.1.7",
     "jsdom": "26.1.0",
     "lint-staged": "15.2.11",
