--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -33,11 +33,11 @@ jobs:
         env:
           REACT_APP_VERSION: ${{ github.sha }}
           REACT_APP_ENTUR_CLIENT_NAME: entur-shamash2023
-      - name: Restructure build artifacts
-        run: |
-          mkdir graphql-explorer
-          mv build/* graphql-explorer/
-          mv graphql-explorer build/
+#      - name: Restructure build artifacts
+#        run: |
+#          mkdir graphql-explorer
+#          mv build/* graphql-explorer/
+#          mv graphql-explorer build/
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
