--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es6",
-      "ES2020"
-    ],
+    "lib": ["dom", "dom.iterable", "es6", "ES2020"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,13 +17,6 @@
     "jsx": "react-jsx",
     "types": ["node", "vite/client"]
   },
-  "include": [
-    "src/**/*",
-    "vite.config.js",
-    "vitest.config.js"
-  ],
-  "exclude": [
-    "node_modules",
-    "build"
-  ]
+  "include": ["src/**/*", "vite.config.js", "vitest.config.js"],
+  "exclude": ["node_modules", "build"]
 }
