--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "crypto-browserify": "3.12.1",
     "dotenv": "16.4.7",
     "global": "4.4.0",
-    "graphiql": "1.11.5",
-    "graphiql-explorer": "0.9.0",
+    "graphiql": "^3.0.0",
     "graphql": "16.11.0",
     "graphql-ws": "5.16.2",
     "history": "5.3.0",
