--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@entur/table": "^4.9.12",
     "@graphiql/plugin-explorer": "5.0.0",
     "@graphiql/react": "0.35.4",
-    "@graphiql/toolkit": "0.11.3",
+    "@graphiql/toolkit": "^0.11.3",
     "@mapbox/polyline": "1.2.1",
     "@turf/bbox": "7.2.0",
     "@turf/helpers": "7.2.0",
