--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "lint": "eslint src && yarn format:check",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" && npm run format:check",
     "format:check": "prettier --check .",
     "format": "prettier --write ."
   },
@@ -80,6 +80,7 @@
     "@typescript-eslint/parser": "8.41.0",
     "@vitejs/plugin-react": "4.7.0",
     "eslint": "8.57.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "28.14.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
