--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,7 @@
-helm
+build/
+node_modules/
+*.min.js
+*.min.css
+coverage/
+dist/
 
-# Don't run formatting on these folders that were generated from ejecting from create-react-app:
-config
-scripts
