--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -32,6 +32,7 @@ jobs:
         env:
           REACT_APP_VERSION: ${{ github.sha }}
           REACT_APP_ENTUR_CLIENT_NAME: entur-shamash2023
+          PUBLIC_URL: ''
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
